--- a/resume.html
+++ b/resume.html
@@ -58,13 +58,13 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">2019 - Present</div>
-                                                <div class="small fw-bolder">Web Developer</div>
-                                                <div class="small text-muted">Stark Industries</div>
-                                                <div class="small text-muted">Los Angeles, CA</div>
+                                                <div class="text-primary fw-bolder mb-2">2023 - 2025</div>
+                                                <div class="small fw-bolder">Desarrollador Unity y Artista 3D</div>
+                                                <div class="small text-muted">PI Gaming</div>
+                                                <div class="small text-muted">Pereira</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>El propósito de la empresa era desarrollar juegos que ayudaran a dar visibilidad a diversas problemáticas. Para lograrlo, era fundamental ofrecer un buen desarrollo y diseños atractivos que captaran la atención del usuario. Yo formaba parte del equipo de desarrollo, dedicando gran parte de mi tiempo al diseño de menús e interfaces que se mostrarían al usuario.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -74,13 +74,13 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">2017 - 2019</div>
-                                                <div class="small fw-bolder">SEM Specialist</div>
-                                                <div class="small text-muted">Wayne Enterprises</div>
-                                                <div class="small text-muted">Gotham City, NY</div>
+                                                <div class="text-primary fw-bolder mb-2">2022 - 2023</div>
+                                                <div class="small fw-bolder">Desarrollador Unity e Investigador</div>
+                                                <div class="small text-muted">Pi Gaming</div>
+                                                <div class="small text-muted">Pereira</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Mi responsabilidad principal era investigar nuevas estrategias y tecnologías emergentes, con el fin de evaluar su aplicabilidad en los proyectos del equipo. Esto facilitaba la optimización de ciertos procesos y permitía transferir ese conocimiento al resto del grupo de manera clara y estructurada.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -94,39 +94,18 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">2015 - 2017</div>
+                                                <div class="text-secondary fw-bolder mb-2">2023 - 2025</div>
                                                 <div class="mb-2">
-                                                    <div class="small fw-bolder">Barnett College</div>
-                                                    <div class="small text-muted">Fairfield, NY</div>
+                                                    <div class="small fw-bolder">Universidad Tecnológica de Pereira</div>
+                                                    <div class="small text-muted">Pereira</div>
                                                 </div>
                                                 <div class="fst-italic">
-                                                    <div class="small text-muted">Master's</div>
-                                                    <div class="small text-muted">Web Development</div>
+                                                    <div class="small text-muted">Pregrado</div>
+                                                    <div class="small text-muted">Ingeniería de Sistemas</div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Education Card 2-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">2011 - 2015</div>
-                                                <div class="mb-2">
-                                                    <div class="small fw-bolder">ULA</div>
-                                                    <div class="small text-muted">Los Angeles, CA</div>
-                                                </div>
-                                                <div class="fst-italic">
-                                                    <div class="small text-muted">Undergraduate</div>
-                                                    <div class="small text-muted">Computer Science</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Actualmente me encuentro estudiando Ingeniería en Sistemas en la Universidad Tecnológica de Pereira. De forma simultánea, y gracias al aprendizaje adquirido, he podido desarrollar proyectos propios mientras continúo fortaleciendo otras habilidades en paralelo.</div></div>
                                     </div>
                                 </div>
                             </div>
