--- a/projects.html
+++ b/projects.html
@@ -72,9 +72,9 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">DatAgranomy</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>Datagronomy es una aplicación de escritorio desarrollada en Python con Tkinter, diseñada para facilitar la gestión productiva y comercial en granjas porcinas. La herramienta centraliza procesos clave relacionados con el manejo de animales, inventario, clientes y ventas, incorporando roles de usuario y reportes básicos para una mejor toma de decisiones.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets\DatAgronomy.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -83,8 +83,8 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Tienda de Productos</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">PixelDom (Tienda de Productos)</h2>
+                                            <p>Desarrollé una aplicación de escritorio robusta y modular utilizando Java y Swing, diseñada para la gestión integral de usuarios y productos. Este sistema implementa tecnicas de clean code, además, tiene sistemas de identificación distinguiendo entre roles de administrador y usuarios regulares para acceder a funcionalidades específicas.</p>
                                         </div>
                                         <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
                                     </div>
