--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
                                             <h2 class="fw-bolder">PixelDom (Tienda de Productos)</h2>
                                             <p>Desarrollé una aplicación de escritorio robusta y modular utilizando Java y Swing, diseñada para la gestión integral de usuarios y productos. Este sistema implementa tecnicas de clean code, además, tiene sistemas de identificación distinguiendo entre roles de administrador y usuarios regulares para acceder a funcionalidades específicas.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="assets\PixelDom.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
