--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <p class="lead fw-light mb-4">Mi nombre es Yigal Rojas Acevedo, tengo 20 años de edad.</p>
                                 <p class="text-muted">Ingeniero en Sistemas (c). He trabajado en proyectos personales y para pequeños estudios desde los 16 años.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-gradient" href="www.linkedin.com/in/yigal-rojas"><i class="bi bi-linkedin"></i></a>
+                                    <a class="text-gradient" href="https://www.linkedin.com/in/yigal-rojas"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-gradient" href="https://github.com/yigal05"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
@@ -195,20 +195,6 @@
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
-                    <div class="col-auto">
-                        <a class="small" href="#!">Privacy</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
