--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3" href="mailto:yigalacevedo@gmail.com"><i class="bi bi-envelope-fill me-2"></i>Send Email</a>
-                                    <a class="btn btn-success btn-lg px-5 py-3" href="https://wa.me/+573147813096" target="_blank"><i class="bi bi-whatsapp me-2"></i>WhatsApp Me</a>
+                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3" href="mailto:yigalacevedo@gmail.com"><i class="bi bi-envelope-fill me-2"></i>Email</a>
+                                    <a class="btn btn-success btn-lg px-5 py-3" href="https://wa.me/+573147813096" target="_blank"><i class="bi bi-whatsapp me-2"></i>WhatsApp</a>
                                 </div>
                             </div>
                         </div>
