--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,22 @@
                                             <h2 class="fw-bolder">RGB</h2>
                                             <p>Proyecto diseñado para enseñar la teoría del color de manera interactiva, utilizando mecánicas de juego y elementos visuales atractivos. Integra experiencias aumentadas para mejorar el aprendizaje práctico y visual del usuario.</p>
                                         </div>
+                                        <div class="mb-5">
+                                        <div class="d-flex align-items-center mb-4">
+                                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-tools"></i></div>
+                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Professional Skills</span></h3>
+                                        </div>
+                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Gestión de Proyectos Tecnológicos</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Desarrollo y Diseño de Videojuegos </div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Código limpio</div></div>
+                                        </div>
+                                        <div class="row row-cols-1 row-cols-md-3">
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Control de versiones con git</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Modelado 3d</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Diseño de interfaz de usuario</div></div>
+                                        </div>
+                                    </div>
                                         <img class="img-fluid" src="assets\RGB.png" alt="..." />
                                     </div>
                                 </div>
