--- a/projects.html
+++ b/projects.html
@@ -50,15 +50,15 @@
                                             <h2 class="fw-bolder">RGB</h2>
                                             <p>Proyecto diseñado para enseñar la teoría del color de manera interactiva, utilizando mecánicas de juego y elementos visuales atractivos. Integra experiencias aumentadas para mejorar el aprendizaje práctico y visual del usuario.</p>
                                             <div class="mb-5">
-                                        <div class="d-flex align-items-center mb-4">
-                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Herramientas Usadas:</span></h3>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Unity</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">C#</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Blender</div></div>
-                                        </div>
-                                    </div>
+                                                <div class="d-flex align-items-center mb-4">
+                                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Herramientas Usadas:</span></h3>
+                                                </div>
+                                                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Unity</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">C#</div></div>
+                                                    <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Blender</div></div>
+                                                </div>
+                                            </div>
                                         </div>
                                         <img class="img-fluid" src="assets\RGB.png" alt="..." />
                                     </div>
@@ -71,6 +71,16 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Graficadora Matematica</h2>
                                             <p>Desarrollé una graficadora matemática capaz de representar funciones básicas, diseñada para facilitar el aprendizaje visual de conceptos algebraicos y cálculo. La aplicación permite ingresar expresiones matemáticas, ajustar rangos y observar solo los cuadrandes donde la gráfica está presente.</p>
+                                            <div class="mb-5">
+                                                <div class="d-flex align-items-center mb-4">
+                                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Herramientas Usadas:</span></h3>
+                                                </div>
+                                                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Unity</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">C#</div></div>
+                                                    <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Blender</div></div>
+                                                </div>
+                                            </div>
                                         </div>
                                         <img class="img-fluid" src="assets\Grafica.png" alt="..." />
                                     </div>
