--- a/projects.html
+++ b/projects.html
@@ -76,9 +76,8 @@
                                                         <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Herramientas Usadas:</span></h3>
                                                 </div>
                                                 <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Unity</div></div>
-                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">C#</div></div>
-                                                    <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Blender</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">C</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">SDL</div></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -93,6 +92,16 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">DatAgranomy</h2>
                                             <p>Datagronomy es una aplicación de escritorio desarrollada en Python con Tkinter, diseñada para facilitar la gestión productiva y comercial en granjas porcinas. La herramienta centraliza procesos clave relacionados con el manejo de animales, inventario, clientes y ventas, incorporando roles de usuario y reportes básicos para una mejor toma de decisiones.</p>
+                                            <div class="mb-5">
+                                                <div class="d-flex align-items-center mb-4">
+                                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Herramientas Usadas:</span></h3>
+                                                </div>
+                                                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Python</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">MySQL</div></div>
+                                                    <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Tkiner</div></div>
+                                                </div>
+                                            </div>
                                         </div>
                                         <img class="img-fluid" src="assets\DatAgronomy.png" alt="..." />
                                     </div>
@@ -105,6 +114,16 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">PixelDom (Tienda de Productos)</h2>
                                             <p>Desarrollé una aplicación de escritorio robusta y modular utilizando Java y Swing, diseñada para la gestión integral de usuarios y productos. Este sistema implementa tecnicas de clean code, además, tiene sistemas de identificación distinguiendo entre roles de administrador y usuarios regulares para acceder a funcionalidades específicas.</p>
+                                            <div class="mb-5">
+                                                <div class="d-flex align-items-center mb-4">
+                                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Herramientas Usadas:</span></h3>
+                                                </div>
+                                                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">JAVA</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Swing</div></div>
+                                                    <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">MySQL</div></div>
+                                                </div>
+                                            </div>
                                         </div>
                                         <img class="img-fluid" src="assets\PixelDom.png" alt="..." />
                                     </div>
